# sensor-simulator

./: README.md
sensor-simulator/: pyproject.toml
sensor-simulator/tests/: test_version.py
