[tool.poetry]
name = "sensor-simulator"
version = "0.0.1"
description = "A python package which generates different fake sensor data based on different input conditions"
authors = ["Tapajoyti Chowdhury <tchowdhury@tnsiit.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
